[tool.poetry]
name = "python-test-project"
version = "0.1.0"
description = ""
authors = ["AniutaP <musenok.ko@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
validators = "^0.34.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
